# measurements

./: ALSACaptureDevice.cpp  ALSACaptureDevice.h  ALSAPCMDevice.cpp  ALSAPCMDevice.h  ALSAPlaybackDevice.cpp  ALSAPlaybackDevice.h  CMakeLists.txt  ImpulseResponseConverter.cpp  ImpulseResponseConverter.h  README.md  Reformatter.h  SweepGenerator.cpp  SweepGenerator.h  room-correction.cpp
drc/: baselib.cpp  baselib.h  boolean.h  bwprefilt.cpp  bwprefilt.h  cfgparse.cpp  cfgparse.h  cmdline.cpp  cmdline.h  config.h  convol.cpp  convol.h  drc-3.2.3.lsm  drc.cbp  drc.cpp  drc.h  drc.layout  drc.workspace.layout  drccfg.cpp  drccfg.h  dsplib.h  dspwind.cpp  dspwind.h  fft.cpp  fft.h  fir.cpp  fir.h  glsweep.c  glsweep.cbp  glsweep.layout  hd.cpp  hd.h  kirkebyfd.cpp  kirkebyfd.h  level.cpp  level.h  lsconv.c  lsconv.cbp  lsconv.depend  lsconv.layout  (+10 more)
drc/MLeaks/: LICENCE  README  _nvwa.h  c++11.h  debug_new.cpp  debug_new.h  fast_mutex.h  static_assert.h
drc/doc/: drc.tex  genpdf.sh  genpng.sh
drc/doc/octave/: XOver.txt  acgw.m  createbasicplots.m  createdrcplots.m  hdmp.m  mkxo.m  ptics.m  safetics.m  tfir.m  xosim.m
drc/getopt/: getopt.c
drc/gsl/: bitreverse.c  c_radix2.c  error.c  hc_main.c  hc_pass_2.c  hc_pass_3.c  hc_pass_4.c  hc_pass_5.c  hc_radix2.c  real_main.c  real_radix2.c
drc/minIni/: minIni.c
drc/test/: cfgtest.bat  cfgtest.sh
